Refs #203, fix box width on homepage + spacing.

--- a/pycon/static/less/responsive-site.less
+++ b/pycon/static/less/responsive-site.less
@@ -184,26 +184,14 @@ body.home {
 	}
 	.city {
 		.montreal {
-			@media (min-width: @breakDesktopLarge) {
-				margin-left: 300px;
-			}
-			@media (max-width: @breakDesktop) {
-				margin-left: 60px;
-			}
 			@media (max-width: @breakTablet) {
 				background-size: 400px 100px;
-				width: 400px;
-				bottom: -10px;
-				margin-left: 17%;
+				background-position: center;
 			}
 			@media (max-width: @breakMobileLandscape) {
 				background-size: 250px 70px;
-				width: 250px;
-				bottom: -40px;
-				margin-left: 22%;
-			}
-			@media (max-width: @breakMobile) {
-				margin-left: 10%;
+				height: 10px;
+				background-position: center;
 			}
  		}
 		.clouds {
